--- a/source/NoMorePanicSave/NoMorePanicSave.csproj
+++ b/source/NoMorePanicSave/NoMorePanicSave.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="NoMorePanicSavePackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowsEventHooker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
